--- a/app/globals.css
+++ b/app/globals.css
@@ -22,5 +22,28 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 0.8em;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 5em;
+  filter: blur(5px);
+  transition: filter 0.5s ease-in;
+}
+
+.flex-body {
+  display: flex;
+  gap: 1em;
+
+  div {
+    flex: 1;
+  }
+}
+
+/* MOBILE */
+
+@media (max-width: 640px) {
+  body {
+    font-size: 1em;
+  }
 }
