--- a/app/globals.css
+++ b/app/globals.css
@@ -24,20 +24,86 @@ body {
   color: var(--foreground);
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 0.8em;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+}
+
+.parent {
+  display: flex;
+  line-height: 1.6;
+  flex-direction: row;
+  gap: 1em;
+}
+
+.parent-left {
+  flex: 0 0 0;
   margin-left: 25%;
+  width: 50px;
+}
+
+.parent-right {
+  flex: 1;
+  margin-top: 20em;
   margin-right: 25%;
-  margin-top: 5em;
-  filter: blur(5px);
-  transition: filter 0.5s ease-in;
+}
+
+.circle {
+  border: 0.5px solid var(--foreground);
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 0.5em;
+  background-color: var(--foreground);
+  transform: translate(50%, 50%);
 }
 
 .flex-body {
   display: flex;
   gap: 1em;
 
-  div {
+  .info {
     flex: 1;
+    height: 20vh;
   }
+
+}
+
+.link-flex {
+  flex: 1;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+input, button, textarea {
+  border: 0.5px solid var(--foreground);
+  padding: 0.5vh;
+  border-radius: 10px;
+}
+
+button {
+  margin: 0.5vh;
+  cursor: pointer;
+  background-color: var(--background);
+}
+
+button:hover {
+  filter: invert();
+}
+
+hr {
+  border: none;
+  border-top: 0.5px solid var(--foreground);
+  margin: 2em 0;
+}
+
+h2 {
+  margin-bottom: 1vh;
 }
 
 /* MOBILE */
