--- a/app/globals.css
+++ b/app/globals.css
@@ -20,8 +20,7 @@ body {
   font-size: 0.7em;
   opacity: 0;
   transition: opacity 0.5s ease-in;
-  margin-top: 2em;
-  background-color: #0a0a0a;
+  margin: 1vh;
 }
 
 .parent {
@@ -34,21 +33,17 @@ body {
   gap: 1em;
 }
 
-#bronze {
-  margin: 0;
-  width: 100%;
+.homepage {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 50%;
-  left: 50%;
-  height: auto;
+  flex-direction: column;
+  min-height: 98vh;
+  align-items: flex-end;
+  justify-content: space-between;
+}
 
-  img {
-    max-width: 50%;
-    width: 50vw;
-    pointer-events: none;
-  }
+#footer {
+  margin-top: auto;
+  width: 100%;
 }
 
 #form {
@@ -64,7 +59,7 @@ body {
   display: flex;
   gap: 1em;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
 
   .info {
     flex: 1;
@@ -73,7 +68,7 @@ body {
 }
 
 .link-flex {
-
+  white-space: nowrap;
   margin-left: auto;
   text-align: right;
   display: flex;
@@ -95,10 +90,21 @@ button:hover {
   color: var(--background);
 }
 
-hr {
-  border: none;
-  border-top: 0.5px solid var(--foreground);
-  margin: 2em 0;
+#inverting-overlay {
+  /* Position the overlay fixed to the viewport */
+  position: fixed;
+  transform: translate(-100%, 0%);
+  transition: transform 0.5s ease-in-out;
+  opacity: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  mix-blend-mode: difference;
+  background-color: white;
+  
+
 }
 
 h2 {
@@ -112,8 +118,4 @@ em {
 /* MOBILE */
 
 @media (max-width: 640px) {
-  #bronze img {
-    max-width: 100%;
-    width: 100%;
-  }
 }
