--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 0.7em;
   opacity: 0;
   transition: opacity 0.5s ease-in;
