--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html { scrollbar-width: none; }
+body::-webkit-scrollbar, body::-webkit-scrollbar-button { display: none; }
+.react-markdown {white-space: 'pre-wrap';}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -21,12 +25,10 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease-in;
   margin: 1vh;
+  -ms-overflow-style: none;
 }
 
 .parent {
-  /*height: 100vh;
-  justify-content: center;
-  align-items: center;*/
   display: flex;
   line-height: 1.6;
   flex-direction: row;
