--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,6 @@
 
 html { scrollbar-width: none; }
 body::-webkit-scrollbar, body::-webkit-scrollbar-button { display: none; }
-.react-markdown {white-space: 'pre-wrap';}
 
 :root {
   --background: #ffffff;
@@ -26,6 +25,7 @@ body {
   transition: opacity 0.5s ease-in;
   margin: 1vh;
   -ms-overflow-style: none;
+  overflow-x: hidden;
 }
 
 .parent {
@@ -70,6 +70,20 @@ body {
 
   .info {
     flex: 1;
+  }
+
+  #absolute-parent {
+    position: absolute;
+    top: 1em;
+    left: -1em;
+    width: 100%;
+  }
+
+  .info-absolute {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.01s linear;
+
   }
 
 }
@@ -149,6 +163,8 @@ em {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 1em;
+    position: relative;
+    z-index: 11;
   }
 
   
