--- a/app/globals.css
+++ b/app/globals.css
@@ -72,24 +72,12 @@ body {
     flex: 1;
   }
 
-  #info-source {
-    max-width: 100vw;
-  }
-
-  #absolute-parent {
-    position: absolute;
-    top: 1em;
-    left: -1em;
-    width: 25vw;
-  }
-  
-
   .info-absolute {
+    max-width: 20vw;
     position: absolute;
-    right: 0;
-
+    left: 1vh;
+    top: 1vh;
   }
-
 }
 
 .link-flex {
